@startuml
class SequenceNode {
    Start() : void
    + ClickButton() : void
    + ClickBack() : void
    + ChangeSprite() : void
    + SetSprites() : void
    + PlayClip() : IEnumerator
    + UpdateInstrument(_instrument:InstrumentType) : void
}
enum NoteType {
    none= 0,
    A= 1,
    B= 2,
    C= 3,
    D= 4,
    E= 5,
    F= 6,
    G= 7,
}
enum InstrumentType {
    Square,
    Sawtooth,
    Sine,
    Noise,
}
class NoteData {
    + name : string
    + sampleRate : int
    + frequency : float
    + duration : float
    + SetValues() : void
    + ChangeNote() : void
    + ClearNote() : void
    + CreateClip(_name:string, _samplerate:int, _frequency:float) : AudioClip
    + CreateSine(_size:int, _samplerate:int, _frequency:float) : float[]
    + CreateSquare(_size:int, _samplerate:int, _frequency:float) : float[]
    + CreateSawtooth(_size:int, _samplerate:int, _frequency:float) : float[]
    + CreateNoise(_size:int, _samplerate:int, _frequency:float) : float[]
}
class "Dictionary`2"<T1,T2> {
}
MonoBehaviour <|-- SequenceNode
SequenceNode --> "note" NoteData
SequenceNode --> "audioSource" AudioSource
SequenceNode o-> "sprite<string,Sprite>" "Dictionary`2"
NoteData --> "note" NoteType
NoteData --> "instrument" InstrumentType
@enduml
